# BayesianSyntheticControlSpillover

./: README.md  pyproject.toml  sample.py
modules/: _bscm_sampling.py
